--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-use": "17.3.1",
     "recharts": "2.1.8",
     "sass": "^1.55.0",
+    "serve-handler": "^6.1.5",
     "swr": "0.4.2",
     "typescript": "4.7.4",
     "web-vitals": "1.1.2"
