--- a/netlify.toml
+++ b/netlify.toml
@@ -13,4 +13,4 @@
     X-Frame-Options = "sameorigin"
     Referrer-Policy = "no-referrer"
     X-Content-Type-Options = "nosniff"
-    Content-Security-Policy = "default-src 'self' netlify-cdp-loader.netlify.app; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' netlify-cdp-loader.netlify.app; connect-src *; frame-src 'self' app.netlify.com; style-src 'self' 'unsafe-inline'; font-src 'self' data:;"
+    Content-Security-Policy = "default-src 'self' netlify-cdp-loader.netlify.app; img-src 'self' data: https: blob:; script-src 'self' 'unsafe-inline' netlify-cdp-loader.netlify.app; connect-src *; frame-src 'self' app.netlify.com; style-src 'self' 'unsafe-inline https:; font-src 'self' data:;"
